# src/reminders/reminders.controller.ts
@@ -1,34 +1,64 @@
-import { Controller, Get, Post, Body, Patch, Param, Delete } from '@nestjs/common';
+import {
+  Controller,
+  Get,
+  Post,
+  Body,
+  UseGuards,
+  HttpCode,
+  HttpStatus,
+  Query,
+  Req,
+  Patch,
+  Param,
+  Delete,
+} from '@nestjs/common';
+import { ApiBearerAuth } from '@nestjs/swagger';
+import { AuthGuard } from 'src/auth/auth.gurads';
 import { RemindersService } from './reminders.service';
 import { CreateReminderDto } from './dto/create-reminder.dto';
 import { UpdateReminderDto } from './dto/update-reminder.dto';
+import { GetRemindersDto } from './dto/get-reminders.dto';
 
+@ApiBearerAuth('jwt-auth')
+@UseGuards(AuthGuard)
 @Controller('reminders')
 export class RemindersController {
   constructor(private readonly remindersService: RemindersService) {}
 
   @Post()
-  create(@Body() createReminderDto: CreateReminderDto) {
-    return this.remindersService.create(createReminderDto);
+  createReminder(@Body() createReminderDto: CreateReminderDto, @Req() req) {
+    return this.remindersService.createReminder(req.user.sub, createReminderDto);
   }
 
+  @HttpCode(HttpStatus.OK)
   @Get()
-  findAll() {
-    return this.remindersService.findAll();
+  getAllReminders(@Query() getRemindersDto: GetRemindersDto, @Req() req) {
+    return this.remindersService.getAllReminders(req.user.sub, getRemindersDto);
   }
 
+  @HttpCode(HttpStatus.OK)
   @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.remindersService.findOne(+id);
+  getReminderById(@Param('id') id: string, @Req() req) {
+    return this.remindersService.getReminderById(id, req.user.sub);
   }
 
-  @Patch(':id')
-  update(@Param('id') id: string, @Body() updateReminderDto: UpdateReminderDto) {
-    return this.remindersService.update(+id, updateReminderDto);
+  @HttpCode(HttpStatus.OK)
+  @Patch(':id/update')
+  updateReminder(
+    @Param('id') id: string,
+    @Body() updateReminderDto: UpdateReminderDto,
+    @Req() req,
+  ) {
+    return this.remindersService.updateReminder(
+      id,
+      req.user.sub,
+      updateReminderDto,
+    );
   }
 
-  @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.remindersService.remove(+id);
+  @HttpCode(HttpStatus.OK)
+  @Delete(':id/delete')
+  deleteReminder(@Param('id') id: string, @Req() req) {
+    return this.remindersService.deleteReminder(id, req.user.sub);
   }
 }
